Remove tech preview in webhooks and CTD

--- a/calico-cloud_versioned_docs/version-20-1/threat/container-threat-detection.mdx
+++ b/calico-cloud_versioned_docs/version-20-1/threat/container-threat-detection.mdx
@@ -6,15 +6,7 @@ redirect_from:
 
 # Container threat detection
 
-:::note
-
-This feature is tech preview. Tech preview features may be subject to significant changes before they become GA.
-
-:::
-
-## Big picture
-
-Get alerts when security threats, such as malware and other suspicious processes, are detected in your cluster.
+Protect your cluster with our eBPF runtime threat detection engine, which detects malware and suspicious process activity in your containers.  
 
 ## Value
 
