--- a/calico/operations/image-options/imageset.mdx
+++ b/calico/operations/image-options/imageset.mdx
@@ -190,8 +190,8 @@ for x in "$\{imagelist[@]}"; do
       digest=$(docker run --rm gcr.io/go-containerregistry/crane:v0.7.0 digest $\{x})
       echo "Adding digest for $x"
       echo
-      echo "  - image: \"$(echo $x | sed -e 's|^.*/\([^/]*/[^/]*\):.*$|\1|')\"" >> ./imageset.yaml
-      echo "    digest: \"$digest\"" >> ./imageset.yaml
+      echo "  - image: \\"$(echo $x | sed -e 's|^.*/\\([^/]*/[^/]*\\):.*$|\\1|')\\"" >> ./imageset.yaml
+      echo "    digest: \\"$digest\\"" >> ./imageset.yaml
     fi
   done
 done`}
