--- a/calico/operations/calicoctl/install.mdx
+++ b/calico/operations/calicoctl/install.mdx
@@ -105,7 +105,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>{`curl -L \{url}/calicoctl-linux-amd64 -o calicoctl`}</CodeBlock>
+   <CodeBlock>{`curl -L ${url}/calicoctl-linux-amd64 -o calicoctl`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -136,7 +136,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>{`curl -L \{url}/calicoctl-darwin-amd64 -o calicoctl`}</CodeBlock>
+   <CodeBlock>{`curl -L ${url}/calicoctl-darwin-amd64 -o calicoctl`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -171,7 +171,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
    :::
 
-<CodeBlock>{`Invoke-WebRequest -Uri "\{url}/calicoctl-windows-amd64.exe" -OutFile "calicoctl.exe" `}</CodeBlock>
+<CodeBlock>{`Invoke-WebRequest -Uri "${url}/calicoctl-windows-amd64.exe" -OutFile "calicoctl.exe" `}</CodeBlock>
 
 </TabItem>
 <TabItem label="Linux PPC64le" value="Linux PPC64le-3">
@@ -188,7 +188,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>{`curl -L \{url}/calicoctl-linux-ppc64le -o calicoctl`}</CodeBlock>
+   <CodeBlock>{`curl -L ${url}/calicoctl-linux-ppc64le -o calicoctl`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -219,7 +219,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>{`curl -L \{url}/calicoctl-linux-arm64 -o calicoctl`}</CodeBlock>
+   <CodeBlock>{`curl -L ${url}/calicoctl-linux-arm64 -o calicoctl`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -255,7 +255,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>{`curl -L \{url}/calicoctl-linux-amd64 -o kubectl-calico`}</CodeBlock>
+   <CodeBlock>{`curl -L ${url}/calicoctl-linux-amd64 -o kubectl-calico`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -286,7 +286,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>{`curl -L \{url}/calicoctl-darwin-amd64 -o kubectl-calico`}</CodeBlock>
+   <CodeBlock>{`curl -L ${url}/calicoctl-darwin-amd64 -o kubectl-calico`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -317,7 +317,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
    :::
 
-<CodeBlock>{`Invoke-WebRequest -Uri "\{url}/calicoctl-windows-amd64.exe" -OutFile kubectl-calico.exe`}</CodeBlock>
+<CodeBlock>{`Invoke-WebRequest -Uri "${url}/calicoctl-windows-amd64.exe" -OutFile kubectl-calico.exe`}</CodeBlock>
 
 </TabItem>
 <TabItem label="Linux PPC64le" value="Linux PPC64le-8">
@@ -334,7 +334,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>{`curl -L \{url}/calicoctl-linux-ppc64le -o kubectl-calico`}</CodeBlock>
+   <CodeBlock>{`curl -L ${url}/calicoctl-linux-ppc64le -o kubectl-calico`}</CodeBlock>
 
 1. Set the file to be executable.
 
@@ -365,7 +365,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
 1. Use the following command to download the `calicoctl` binary.
 
-   <CodeBlock>{`curl -L \{url}/calicoctl-linux-arm64 -o kubectl-calico`}</CodeBlock>
+   <CodeBlock>{`curl -L ${url}/calicoctl-linux-arm64 -o kubectl-calico`}</CodeBlock>
 
 1. Set the file to be executable.
 
