--- a/calico-cloud/threat/configuring-webhooks.mdx
+++ b/calico-cloud/threat/configuring-webhooks.mdx
@@ -1,5 +1,5 @@
 ---
-description: Send security event alerts to 3rd party systems.
+description: Use webhooks to send security event alerts to third-party systems.
 title: Webhooks for security events
 ---
 
