--- a/calico-cloud/threat/configuring-webhooks.mdx
+++ b/calico-cloud/threat/configuring-webhooks.mdx
@@ -5,7 +5,7 @@ title: Webhooks for security events
 
 # Webhooks for security event alerts
 
-You can configure {{prodname}} webhooks to post security alerts directly to Slack, Jira or any custom HTTP endpoint.
+You can configure {{prodname}} webhooks to post security alerts directly to Slack, Jira, or any custom HTTP endpoint.
 
 ## Before you begin
 
