--- a/calico-enterprise/threat/configuring-webhooks.mdx
+++ b/calico-enterprise/threat/configuring-webhooks.mdx
@@ -1,11 +1,11 @@
 ---
-description: Send security event alerts to 3rd party systems.
+description: Use webhooks to send security event alerts to third-party systems.
 title: Webhooks for security events
 ---
 
 # Webhooks for security event alerts
 
-You can configure {{prodname}} webhooks to post security alerts directly to Slack, Jira or any custom HTTP endpoint.
+You can configure {{prodname}} webhooks to post security alerts directly to Slack, Jira, or any custom HTTP endpoint.
 
 ## Before you begin
 
