--- a/calico/networking/openstack/labels.mdx
+++ b/calico/networking/openstack/labels.mdx
@@ -5,20 +5,23 @@ description: Use Calico labels to define policy for OpenStack VMs.
 # Endpoint labels and operator policy
 
 When {{prodname}} represents an OpenStack VM as a {{prodname}} WorkloadEndpoint,
-it puts labels on the WorkloadEndpoint to identify the project, security groups and
-namespace that the VM belongs to. The deployment operator can use these labels to
-configure {{prodname}} policy that is additional to the policy defined by OpenStack
-security groups, and that cannot be overridden by user-level security group config.
+it puts labels on the WorkloadEndpoint to identify the project, network, security
+groups and namespace that the VM belongs to. The deployment operator can use these
+labels to configure {{prodname}} policy that is additional to the policy defined
+by OpenStack security groups, and that cannot be overridden by user-level security
+group config.
 
 ## VM endpoint labels
 
-For the VM's OpenStack project (previously known as 'tenant'), those labels are:
+For the VM's OpenStack project (previously known as 'tenant') and network, those
+labels are:
 
 | Label Name                                        | Value                            |
 | ------------------------------------------------- | -------------------------------- |
 | `projectcalico.org/openstack-project-id`          | `<the VM's project ID>`          |
 | `projectcalico.org/openstack-project-name`        | `<the VM's project name>`        |
 | `projectcalico.org/openstack-project-parent-id`   | `<the VM's parent project ID>`   |
+| `projectcalico.org/openstack-network-name`        | `<the VM's network name>`        |
 | ------------------------------------------------- | -------------------------------- |
 
 For each security group that the VM belongs to, those labels are:
