--- a/calico-enterprise/network-policy/policy-tiers/tiered-policy.mdx
+++ b/calico-enterprise/network-policy/policy-tiers/tiered-policy.mdx
@@ -64,11 +64,7 @@ The default tier is where:
 
 ## AdminNetworkPolicy tier:
 
-The AdminNetworkPolicy tier is created during installation and has the order of 1,000.
-
-The AdminNetworkPolicy tier is where:
-
-- You manage all Kubernetes admin network policies
+The AdminNetworkPolicy tier where is all Kubernetes admin network policies reside. It is automatically created during installation and has the order of 1,000.
 
 ## System tiers
 
