--- a/calico/getting-started/kubernetes/requirements.mdx
+++ b/calico/getting-started/kubernetes/requirements.mdx
@@ -46,8 +46,8 @@ If you're working with a cluster that already uses another CNI, you cannot migra
 {{prodname}} supports the following kube-proxy modes:
 
 - `iptables` (default)
-- `ipvs` Requires Kubernetes &#8805;  v1.9.3. Refer to [Use IPVS kube-proxy](../../networking/configuring/use-ipvs.mdx) for more details.
-- `nftables` Requires Kubernetes &#8805;  v1.31.0. Refer to [Calico nftables data plane](nftables.mdx) for more details.
+- `ipvs`: Requires Kubernetes &#8805;  v1.9.3. Refer to [Use IPVS kube-proxy](../../networking/configuring/use-ipvs.mdx) for more details.
+- `nftables`: Requires Kubernetes &#8805;  v1.31.0. Refer to [Calico nftables data plane](nftables.mdx) for more details.
 
 #### IP pool configuration
 
